# ME-433-

./: Info on different chips.docx
Digital signal processing/: DSP.py
HW5_RP2350/: CMakeLists.txt  HW5_DAC.c  HW5_DAC.h  HW5_RP2350.c  HW5_RP2350.h
Hw3_CDC_IO_ADC/: CMakeLists.txt  Hw3_CDC_IO_ADC.c
Hw4_DAC/: CMakeLists.txt  Hw4_DAC.c  Hw4_DAC.h  MCP4912.docx
I2C/: I2C.c
I2C_display/: CMakeLists.txt  I2C_display.c
MPU_6050_Accelerometer/: CMakeLists.txt  MPU_6050_Accelerometer.c
Mouse/: CMakeLists.txt  mouse.c
PCB design/Ki Cad files/: Ki Cad files.kicad_pcb  Ki Cad files.kicad_prl  Ki Cad files.kicad_pro  Ki Cad files.kicad_sch  Orlyse.kicad_sym  sym-lib-table
PWM_RCServos_Addressable_LEDs/: CMakeLists.txt  PWM_RCServos_Addressable_LEDs.c  ws2812_parallel.c
PWM_Servos/: CMakeLists.txt  PWM_Servos.c
Rainbow_light/: CMakeLists.txt
Robot_Final_Project/: CMakeLists.txt  Robot_Final_Project.c  cam.c  cam.h  camera.c
camera/: CMakeLists.txt  camera.c  camera.py  ov7670.h  read_camera.py
camera v2/Camera2/: CMakeLists.txt  camera.c  ov7670.h  read_camera.py
dev_hid_composite/: CMakeLists.txt  main.c
gpio_test/: CMakeLists.txt  gpio_test.c
hello_gpio_irq/: CMakeLists.txt  hello_gpio_irq.c
hw2_led_button/: CMakeLists.txt  hw2_led_button.c
motor_control/: CMakeLists.txt  motor_control.c
pio_ws2812/: CMakeLists.txt  ws2812.c
